<resources>
    <string name="app_name">Lost&amp;Found</string>
    <string name="login">Next ></string>
    <string name="email">Enter you email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in_to_access_your_account">sign in to access your account</string>
    <string name="new_member">New Member ?</string>
    <string name="login_here">Login Here</string>
    <string name="already_a_member">Already a member ?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="app_logo_description"><![CDATA[Lost&Found]]></string>
    <string name="my_account">Profile </string>
    <string name="discover">Discover</string>
    <string name="navigation_tabs">Navigation Tabs</string>
    <string name="post">Post\n</string>
    <string name="tabs_for_navigating_content">Tabs for navigating content</string>
    <string name="my_profile">My Profile</string>
    <string name="my_posts">My Posts</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_posts_message">You haven\'t posted any items yet.</string>
    <string name="edit">edit\n</string>
    <string name="delete">Delete</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="google_maps_key" translatable="false">${PLACES_API_KEY}</string>
    <string name="edit_profile_picture">Edit profile picture</string>
    <string name="edit_password_sheet"><![CDATA[Set your new password so you can login and access LOST&FOUND]]></string>
    <string name="new_password">Confirm new password</string>
    <string name="create_new_password">Create new password</string>
    <string name="enter_old_password">Enter Old password</string>
    <string name="create_new_password_text">Create New Password</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone Number</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="e_mail_id">E-mail ID</string>
    <string name="password_acc">Password</string>
    <string name="change">Change</string>
    <string name="pass_symbol">**********</string>
    <string name="proceed">Proceed</string>
    <string name="message_last_page"><![CDATA[You\'re ready to use Lost&Found!]]></string>
    <string name="google_sign_in">Google Sign In\n</string>
    <string name="default_web_client_id">654681759634-d9farkpseie4aka2nes4tsboijc15pl8.apps.googleusercontent.com</string>
    <string name="clear">clear</string>
    <string name="notifications">notifications</string>
    <string name="channel_name">Lost and Found Alerts</string>
    <string name="channel_description">Notifications for new lost and found items</string>

</resources>