<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Login"
    android:background="@color/backgroundcolor"

    >
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/welcome_back"
        android:textSize="34sp"
        android:layout_marginBottom="10dp"
         />
</LinearLayout>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/sign_in_to_access_your_account"
        android:textSize="16sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxBackgroundColor="@color/boxcolor"
        android:layout_marginTop="20dp"


        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:fontFamily="@font/montserrat_light"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxBackgroundColor="@color/boxcolor"
        android:layout_marginTop="20dp"
        >

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/password"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_light"
            android:hint="@string/password"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="20dp"
        android:textSize="22dp"
        android:fontFamily="@font/montserrat_bold"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/bluebutton"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/new_member"
            android:textSize="18sp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/registerNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/click_to_register"
            android:textColor="#6c63ff"
            android:textSize="18sp"
             />
    </LinearLayout>
</LinearLayout>