<!-- layout/fragment_change_password_bottom_sheet.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/rounded_corner_background"
    android:gravity="center_horizontal">

    <!-- Security Icon -->
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/app_logo_foreground"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp" />

    <!-- Title for Create New Password -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_password_text"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <!-- Description -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_password_sheet"
        android:gravity="center"
        android:layout_marginBottom="24dp" />

    <!-- EditText for Old Password -->
    <EditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_old_password"
        android:inputType="textPassword"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/baseline_lock_outline_black_18"
        android:drawablePadding="10dp"
        android:layout_marginBottom="16dp"
        android:padding="12dp"/>

    <!-- EditText for New Password -->
    <EditText
        android:id="@+id/edit_text_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_new_password"
        android:inputType="textPassword"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/baseline_lock_outline_black_18"
        android:drawablePadding="10dp"
        android:layout_marginBottom="16dp"
        android:padding="12dp"/>

    <!-- EditText for Confirm New Password -->
    <EditText
        android:id="@+id/edit_text_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/baseline_lock_outline_black_18"
        android:drawablePadding="10dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"/>

    <!-- Reset Password Button -->
    <Button
        android:id="@+id/button_reset_password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/bluebutton"
        android:textColor="@color/white"
        android:text="Reset Password"
        android:textSize="16sp" />

</LinearLayout>


