<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".userdetails.Register"
    android:background="@color/backgroundcolor"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="60dp"
        android:text="@string/register"
        android:textSize="25sp"
        android:fontFamily="@font/montserrat_bold"

        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxBackgroundColor="@color/boxcolor"
        android:layout_marginTop="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:fontFamily="@font/montserrat_light"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxBackgroundColor="@color/boxcolor"
        android:layout_marginTop="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="@font/montserrat_light"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxBackgroundColor="@color/boxcolor"
        android:layout_marginTop="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_pass"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:fontFamily="@font/montserrat_light"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/btn_register"
        android:text="@string/register"
        android:layout_marginTop="25dp"
        android:textSize="22dp"
        android:fontFamily="@font/montserrat_bold"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/bluebutton"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/already_a_member"
            android:textSize="18sp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/loginNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/login_here"
            android:textColor="#6c63ff"
            android:textSize="18sp"
            />
    </LinearLayout>



</LinearLayout>