<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_my_account"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_account"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/baseline_account_circle_gray_24"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/user_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                />

        </RelativeLayout>



        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="50dp"
            android:id="@+id/recyclerViewMyAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:clickable="true"
            />


        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/logout"
            android:layout_below="@+id/user_details" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recyclerViewMyAccount"
            android:contentDescription="@string/navigation_tabs" />

    </LinearLayout>


</FrameLayout>
